--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,7 +36,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, role: PUBLIC_ACCESS }
-        - { path: ^/, role: PUBLIC_ACCESS }
+        - { path: ^/, role: ROLE_USER }
         - { path: ^/admin, role: ROLE_ADMIN }
 
 when@test:
