--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,10 @@ security:
         - { path: ^/, role: ROLE_USER }
         - { path: ^/admin, role: ROLE_ADMIN }
 
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
 when@test:
     security:
         password_hashers:
