--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env
+.env.dev
+.env.test
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -17,4 +20,3 @@
 ###> symfony/asset-mapper ###
 /public/assets/
 /assets/vendor/
-###< symfony/asset-mapper ###
