--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/yaml": "7.3.*",
+        "tattali/calendar-bundle": "^7.0",
         "twig/extra-bundle": "^2.12|^3.21",
         "twig/twig": "^2.12|^3.21.1"
     },
