--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "symfony/yaml": "7.3.*",
         "tattali/calendar-bundle": "^7.0",
         "twig/extra-bundle": "^2.12|^3.21",
+        "twig/intl-extra": "^3.21",
         "twig/twig": "^2.12|^3.21.1"
     },
     "config": {
