--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,10 +37,11 @@ security:
     access_control:
         - { path: ^/login, role: PUBLIC_ACCESS }
         - { path: ^/, role: ROLE_USER }
-        - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: ^/admin, role: ROLE_RH }
 
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+        ROLE_RH: ROLE_USER
+        ROLE_ADMIN: ROLE_RH
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 when@test:
