--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "symfony/skeleton",
+    "name": "appformation",
     "type": "project",
     "license": "proprietary",
-    "description": "A minimal Symfony project recommended to create bare bones applications",
+    "description": "Application de gestion de formations",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
