fix(composer) - Correction du nom invalide

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "appformation",
+    "name": "mathieucorne/villefontaine-appformation",
     "type": "project",
     "license": "proprietary",
     "description": "Application de gestion de formations",
